fix scrollbar behaviour in IE7
git-svn-id: file:///home/awy/mirror/slim/trunk/server@15821 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/Default/slimserver.css
+++ b/HTML/Default/slimserver.css
@@ -1025,6 +1025,7 @@ body.settings {
 }
 
 body.settingsMenu {
+	position: relative;
 	margin-left: 5px;
 	overflow: auto;
 	background-color: white;
